v0.8.x/_sources/reference/fury.data.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`data`
===========
.. automodule:: fury.data

.. currentmodule:: fury.data
.. autosummary::

   dirname
   fetch_gltf
   fetch_viz_cubemaps
   fetch_viz_dmri
   fetch_viz_icons
   fetch_viz_models
   fetch_viz_new_icons
   fetch_viz_textures
   fetch_viz_wiki_nw
   list_gltf_sample_models
   pjoin
   read_viz_cubemap
   read_viz_dmri
   read_viz_gltf
   read_viz_icons
   read_viz_models
   read_viz_textures

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`data.fetcher`
---------------------------
.. automodule:: fury.data.fetcher

.. currentmodule:: fury.data.fetcher
.. autosummary::

   check_sha
   copyfileobj
   copyfileobj_withprogress
   dirname
   fetch_data
   fetch_gltf
   fetch_viz_cubemaps
   fetch_viz_dmri
   fetch_viz_icons
   fetch_viz_models
   fetch_viz_new_icons
   fetch_viz_textures
   fetch_viz_wiki_nw
   list_gltf_sample_models
   pjoin
   read_viz_cubemap
   read_viz_dmri
   read_viz_gltf
   read_viz_icons
   read_viz_models
   read_viz_textures
   sha256
   update_progressbar


.. currentmodule:: fury.data

dirname
~~~~~~~

.. autofunction:: dirname

fetch_gltf
~~~~~~~~~~

.. autofunction:: fetch_gltf

fetch_viz_cubemaps
~~~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_cubemaps

fetch_viz_dmri
~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_dmri

fetch_viz_icons
~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_icons

fetch_viz_models
~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_models

fetch_viz_new_icons
~~~~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_new_icons

fetch_viz_textures
~~~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_textures

fetch_viz_wiki_nw
~~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_wiki_nw

list_gltf_sample_models
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: list_gltf_sample_models

pjoin
~~~~~

.. autofunction:: pjoin

read_viz_cubemap
~~~~~~~~~~~~~~~~

.. autofunction:: read_viz_cubemap

read_viz_dmri
~~~~~~~~~~~~~

.. autofunction:: read_viz_dmri

read_viz_gltf
~~~~~~~~~~~~~

.. autofunction:: read_viz_gltf

read_viz_icons
~~~~~~~~~~~~~~

.. autofunction:: read_viz_icons

read_viz_models
~~~~~~~~~~~~~~~

.. autofunction:: read_viz_models

read_viz_textures
~~~~~~~~~~~~~~~~~

.. autofunction:: read_viz_textures


.. currentmodule:: fury.data.fetcher

check_sha
~~~~~~~~~

.. autofunction:: check_sha

copyfileobj
~~~~~~~~~~~

.. autofunction:: copyfileobj

copyfileobj_withprogress
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: copyfileobj_withprogress

dirname
~~~~~~~

.. autofunction:: dirname

fetch_data
~~~~~~~~~~

.. autofunction:: fetch_data

fetch_gltf
~~~~~~~~~~

.. autofunction:: fetch_gltf

fetch_viz_cubemaps
~~~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_cubemaps

fetch_viz_dmri
~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_dmri

fetch_viz_icons
~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_icons

fetch_viz_models
~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_models

fetch_viz_new_icons
~~~~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_new_icons

fetch_viz_textures
~~~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_textures

fetch_viz_wiki_nw
~~~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_wiki_nw

list_gltf_sample_models
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: list_gltf_sample_models

pjoin
~~~~~

.. autofunction:: pjoin

read_viz_cubemap
~~~~~~~~~~~~~~~~

.. autofunction:: read_viz_cubemap

read_viz_dmri
~~~~~~~~~~~~~

.. autofunction:: read_viz_dmri

read_viz_gltf
~~~~~~~~~~~~~

.. autofunction:: read_viz_gltf

read_viz_icons
~~~~~~~~~~~~~~

.. autofunction:: read_viz_icons

read_viz_models
~~~~~~~~~~~~~~~

.. autofunction:: read_viz_models

read_viz_textures
~~~~~~~~~~~~~~~~~

.. autofunction:: read_viz_textures

sha256
~~~~~~

.. autofunction:: sha256

update_progressbar
~~~~~~~~~~~~~~~~~~

.. autofunction:: update_progressbar

